--- a/Ticket-de-Turno/Ticket-de-Turno.vbproj
+++ b/Ticket-de-Turno/Ticket-de-Turno.vbproj
@@ -72,8 +72,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Administrador.vb" />
+    <Compile Include="Model\CURPValidator.vb" />
     <Compile Include="Model\DBManager.vb" />
     <Compile Include="Model\Solicitud.vb" />
+    <Compile Include="View\AlumnoFormCRUD.Designer.vb">
+      <DependentUpon>AlumnoFormCRUD.vb</DependentUpon>
+    </Compile>
+    <Compile Include="View\AlumnoFormCRUD.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="View\LoginForm.vb">
       <SubType>Form</SubType>
       <CustomToolNamespace>Login</CustomToolNamespace>
@@ -99,6 +106,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="View\MenuForm.Designer.vb">
+      <DependentUpon>MenuForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="View\MenuForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -107,8 +120,14 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\AlumnoFormCRUD.resx">
+      <DependentUpon>AlumnoFormCRUD.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\LoginForm.resx">
       <DependentUpon>LoginForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\MenuForm.resx">
+      <DependentUpon>MenuForm.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
