--- a/Ticket-de-Turno/Ticket-de-Turno.vbproj
+++ b/Ticket-de-Turno/Ticket-de-Turno.vbproj
@@ -55,6 +55,7 @@
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -78,6 +79,7 @@
     <Compile Include="Controller\TheGlobal.vb" />
     <Compile Include="Model\Administrador.vb" />
     <Compile Include="Model\CURPValidator.vb" />
+    <Compile Include="Model\DashboardModel.vb" />
     <Compile Include="Model\GetLists.vb" />
     <Compile Include="Model\Solicitud.vb" />
     <Compile Include="Model\TableInfo.vb" />
